--- a/desktop.ini
+++ b/desktop.ini
@@ -1,5 +1,5 @@
 [.ShellClassInfo]
-IconResource=D:\WKDVie-Development\Repository\Odin-Project\FourWins\Folder_Graphics\Coins\yellow-ico.ico,0
+IconResource=D:\WKDVie-Development\Repository\Odin-Project\FourWins\graphics\Coins\yellow-ico.ico,0
 [ViewState]
 Mode=
 Vid=
